# safer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: auto-release.yml
docs/: RELEASING.md
docs/demo/: script.md  smoke.md
examples/: README.md  _chat.py
examples/adk-ollama/: README.md  main.py
examples/anthropic-chat/: README.md  main.py
examples/anthropic-otel/: README.md  main.py
examples/buggy-helpdesk/: README.md  main.py
examples/code-analyst/: README.md  main.py
examples/coding_assistant/: README.md  config.py  main.py  memory.py  pyproject.toml  tool_specs.py
examples/coding_assistant/agents/: __init__.py  supervisor.py  worker.py
examples/coding_assistant/tools/: __init__.py  filesystem.py  git.py  shell.py  web.py
examples/customer-support/: README.md  main.py  store.py
examples/google-adk/: README.md  main.py
examples/langchain-ollama/: README.md  main.py
examples/openai-agents/: README.md  main.py
examples/openai-agents-ollama/: README.md  main.py
examples/openai-ollama/: README.md  main.py
examples/openai-otel/: README.md  main.py
examples/strands/: README.md  main.py
examples/strands-ollama/: README.md  main.py
examples/vanilla-python/: README.md  main.py
scripts/: check_managed_agents_access.py  seed_demo.py
