[project]
name = "safer-workspace"
version = "0.1.0"
description = "SAFER — Agent Control Plane (monorepo root)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/sdk", "packages/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/sdk/tests", "packages/backend/tests"]
asyncio_mode = "auto"
