[project]
name = "safer-workspace"
version = "0.1.0"
description = "SAFER — Agent Control Plane (monorepo root)"
requires-python = ">=3.11"
dependencies = [
    "safer-sdk",
    "safer-backend",
]

[tool.uv.workspace]
members = ["packages/sdk", "packages/backend"]

[tool.uv.sources]
safer-sdk = { workspace = true }
safer-backend = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
    "google-adk>=1.31.1",
    "strands-agents>=1.37.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/sdk/tests", "packages/backend/tests"]
asyncio_mode = "auto"
