[project]
name = "safer-workspace"
version = "0.1.0"
description = "SAFER — Agent Control Plane (monorepo root)"
requires-python = ">=3.11"
dependencies = [
    "safer-sdk",
    "safer-backend",
]

[tool.uv.workspace]
members = ["packages/sdk", "packages/backend"]

[tool.uv.sources]
safer-sdk = { workspace = true }
safer-backend = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
    "anthropic>=0.97",
    "openai>=2.32",
    "openai-agents>=0.14",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "google-adk>=1.31.1",
    "strands-agents>=1.37.0",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation-anthropic>=0.45b0",
    "opentelemetry-instrumentation-openai>=0.45b0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/sdk/tests", "packages/backend/tests"]
asyncio_mode = "auto"
